@@ -1,3 +1,10 @@
+Mon Oct 29 16:27:55 2001  David Helder  <dhelder@umich.edu>
+
+	* src/unix.c: Unlink socket on delete, doc fixes
+	* examples/echoserver-unix.c: Delete socket on SIGINT, SIGTERM
+
+	* src/tcp.c (gnet_tcp_socket_server_accept_nonblock): Doc fix.
+
 Thu Oct 25 10:48:51 2001  David Helder  <dhelder@umich.edu>
 
 	* configure.in, Makefile.am: Include deb/rpm stuff
